// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Pattern Library / Typography / Chevron Anchor Civil Themed 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-LzNMV juCPIv"
    >
      <a
        href="#"
      >
        Check this out
        <svg
          height={14}
          version="1.1"
          viewBox="0 0 14 14"
          width={14}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <polygon
              points="0 0 18 0 18 18 0 18"
            />
            <polygon
              fill="#2B56FF"
              fillRule="nonzero"
              points="7.5 4.5 6.4425 5.5575 9.8775 9 6.4425 12.4425 7.5 13.5 12 9"
            />
          </g>
        </svg>
      </a>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "height": "100vh",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "top": 0,
        "width": "100vw",
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Pattern Library / Typography / Chevron Anchor
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Civil Themed
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    styled.div
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &lt;
                      ChevronAnchor
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          href
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              #
                            </span>
                            "
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      Check this out
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &lt;/
                      ChevronAnchor
                      &gt;
                    </span>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    styled.div
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              ChevronAnchor
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              styled.div
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pattern Library / Typography / Chevron Anchor Civil Themed, Left 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-LzNMV juCPIv"
    >
      <a
        href="#"
      >
        <svg
          className="sc-fzXfQn EWOtT"
          height={14}
          version="1.1"
          viewBox="0 0 14 14"
          width={14}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <polygon
              points="0 0 18 0 18 18 0 18"
            />
            <polygon
              fill="#2B56FF"
              fillRule="nonzero"
              points="7.5 4.5 6.4425 5.5575 9.8775 9 6.4425 12.4425 7.5 13.5 12 9"
            />
          </g>
        </svg>
        Go back to that thing
      </a>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "height": "100vh",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "top": 0,
        "width": "100vw",
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Pattern Library / Typography / Chevron Anchor
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Civil Themed, Left
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    styled.div
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &lt;
                      ChevronAnchorLeft
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          href
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              #
                            </span>
                            "
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      Go back to that thing
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &lt;/
                      ChevronAnchorLeft
                      &gt;
                    </span>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    styled.div
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              ChevronAnchorLeft
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              styled.div
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pattern Library / Typography / Chevron Anchor Default 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <a
      href="#"
    >
      Check this out
      <svg
        height={14}
        version="1.1"
        viewBox="0 0 14 14"
        width={14}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <polygon
            points="0 0 18 0 18 18 0 18"
          />
          <polygon
            fill="#2B56FF"
            fillRule="nonzero"
            points="7.5 4.5 6.4425 5.5575 9.8775 9 6.4425 12.4425 7.5 13.5 12 9"
          />
        </g>
      </svg>
    </a>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "height": "100vh",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "top": 0,
        "width": "100vw",
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Pattern Library / Typography / Chevron Anchor
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            Default
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    ChevronAnchor
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        href
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            #
                          </span>
                          "
                        </span>
                      </span>
                      
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    Check this out
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    ChevronAnchor
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              ChevronAnchor
              " Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
